@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX config.gentoo 883 RMD160 7e6abf65cc60bbd409d4b10004eeb66dc91fa019 SHA1 0c1c2394d75f2a6beb3c7c540df96d4720232510 SHA256 6d5b8f14b5ede4e04835730fe9ffc6246774c7cb10891cbb6337f567eff4f079
 AUX live-2009.06.02-as-needed.patch 2046 RMD160 0b3d76de9a4e3204270f9a6d302f30dfaa35e231 SHA1 c123bf94e44e1956586038e98b54b66fad42e129 SHA256 91a6686066fb66d191ae715b30e21b1df26546cd07aa3a4ce3280521a90739da
 AUX live-2009.06.02-buildorder.patch 924 RMD160 a9a6a7a364b21b43859e35e6e023715bb0fad7dd SHA1 f86fa92a48572bb89b4a6a38c6aed4edd4d098de SHA256 59a91ecbbcdda7f62f7150962490333bbb67e2ee838ff9c6e334dd5d0ab20813
@@ -8,9 +11,28 @@ DIST live.2009.06.02.tar.gz 469471 RMD160 ddbe057ac4f47d66ee7c99ec3c4886fe97f065
 DIST live.2009.09.28.tar.gz 449508 RMD160 c25cb1a2377f0fe6c3817bbc3edbcd4daa57d0dc SHA1 e5657206976f592e3fd1fda9cfe77b5712498784 SHA256 0e84700e8982ac5472723c0327131c179512d4b99fe0c4ae903cfe08a1a0e03c
 DIST live.2009.11.12.tar.gz 449650 RMD160 ef21d2b72aaf2044c9e96cadfe62cc1304d89843 SHA1 14830984d85ef710835d5e9c26ebb626b66c0260 SHA256 f6ee9c1079b5ab8e330c9edd7634bcffd76eb434cf52fe2ea06c4072bf823645
 DIST live.2010.04.09.tar.gz 452846 RMD160 3ee1d0c767e139e3d7cc66fd6409404e625dee73 SHA1 3c480355b153847273b30f0ce30cf80dff12e170 SHA256 e9539f59058cb885f28ac48cdce285f8a0fe567c4aa889c2ac3bd0638b007944
+DIST live.2011.01.24.tar.gz 480478 RMD160 2c029b276fc382f0e483fe769a021b2b280e8ed6 SHA1 94545798f1b700d6e30c4b132d7bcff4d5d14db8 SHA256 7c98cf1db4ba1015645f6e4f5f51442b0d54eb76a8f477737aded58a5dc2bd42
 EBUILD live-2009.06.02.ebuild 2547 RMD160 0f43b19c53d4c6be7f4643a961ba32a83a7ede5d SHA1 88e01d0a3498a6439249270deb4d642ab8cb4737 SHA256 8cbd9d36063f2acfe7728bcc2ad4dd8112b4fd9993caf60e03547fea0ab88bc3
 EBUILD live-2009.09.28.ebuild 2534 RMD160 94e6c28e16926040e2295d4cfe51dd5a4bcba4bd SHA1 cb13c5ccdf07cac07f8bafb4a91d033e136bee6e SHA256 bebe47d33036bf28d89fd3a5c365eb76aa8885e738a7af02320c8bca98cf2f8c
 EBUILD live-2009.11.12.ebuild 2513 RMD160 c1293171f7798ab32aa03a7fe63ed45540af8d5c SHA1 5c47796e9e96223f0079aec84df38237394c6b9d SHA256 ffcb29f699392b4a1d5ce0d82c5615d346dd8cfece0e0171391e23881ef1b933
 EBUILD live-2010.04.09.ebuild 3800 RMD160 db49422df67fae1712316f84711da896c3dc7513 SHA1 2f6f9e21a306c65c14af8843c2b516a3aa61da08 SHA256 62e124ca439c1be7b6fadd132dbb78c921e0e00d4f50844da261c86af3582026
-MISC ChangeLog 16803 RMD160 a5d8bab031d53d22a5f87072969e0199380dd136 SHA1 6d218057dbbdbf62c7f750760668c5fbeccb37e4 SHA256 dc5e63ae141d39768ea2a4dacc9837033fa9af9bb4a31e6690bf036fec18e27b
+EBUILD live-2011.01.24.ebuild 3695 RMD160 ff5732ead05d88a7c67d5e55dfa99d0073ad207a SHA1 0c6e3899ebcf406f63b1496879528aba78fd6e83 SHA256 32341b8db1cab06624064b69b65e6b73ac22feb6280ea41e37558b1c200cd4cf
+MISC ChangeLog 16948 RMD160 dc5127d8dac3a5c9cc652c770610aca4977e73ff SHA1 51b827caab1d722f7d1b95408e112c0a6b0d1d20 SHA256 ba1248582ab0b43984279b3c9ef2ff0030e30dc87021960a2cedb3c939952357
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iQIcBAEBCAAGBQJNZIDcAAoJEHQ6UuhrqBBQ1JUQALEidLIaIpkAbWCtuUSejhE1
+cViV/47Z4/P86xVcBR+En+o471dBQE04nFeWswkgZTaq/Qax7H91tZNaYxtIYp2O
+J5HZA5IKYZIoNtsxWbMYTV0SrDKVOB0bHN8CldnviR1M5wHXMbWDWkFxq92mmqIl
+nS5XXUyhyAzmZqzwXSZfHNllG7aA2TEDNSqWjPxcxahFPtIQTPNOy9tBBoZ3AUC5
+94pyWn1BmnNmFcRqDcOq6gaio5RHqnNlDiXmN2nDh4ZXlI/bw+LOxkEzVD51KrkP
+UjnEQtkx3odQ6hqCz3jyRxQE0AeMLvD1UoBaLYbPi3kRX7FLQ/FPiSX638306SIk
+8UcqhXGVwP60xl5+iYaPX+dMCvM3EE6kgtwSTbfdCVDZSd8JX/Brq9QrQTJwaGR/
+kIwYTs1dZIOvX0SYqpX1u4ATmITmi8jMFPSODY3WsUBhVuR1z2vr2r25jZUiNEIX
+KKmQ5AffjB7bzuHJeTIFwiGiBnvtJ5Jhk0ETxlTi/BODfDq/Px4tWESdxxh8ZBp5
+uynEqfSDWnNueLGggezxDei5etHG4pWHaaTRXf5pSG0+2TDxCrwdTGYhGIomXrbW
+fNH4bqFKIQlma3C/tlhJPWgPnwqFsk6BQJq6US+FWrICy5LzYq+cqxIawxnlOabv
+93sdkGBwX523al+9ZFQb
+=auFG
+-----END PGP SIGNATURE-----
