@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/live
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.126 2010/01/06 16:55:17 ranger Exp $
+
+  23 Feb 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
+  +live-2011.01.24.ebuild:
+  Bump patched ebuild to live-2011.01.24.
 
   27 Sep 2010; <binki@gentoo.org> live-2010.04.09.ebuild:
   Add support for gentoo-prefix to my portage-mutilib hack to
